--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -1,11 +1,26 @@
 name: My first workflow
 
-on:
-  push:
-    branches: ['main']
+on: [push]
 
-job:
-  Print-Hello:
-    - name: Print hello
-      run: |
-        echo "Hello"
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout 
+        uses: actions/checkout@v3
+
+      - name: Setup dotnet
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '6.0.x'
+      
+      - name: Restore application
+        run: dotnet restore
+        working-directory: LINQ
+
+      - name: Build application
+        run: dotnet build
+
+      - name: Run application
+        run: dotnet run
