--- a/LINQ/LINQ.csproj
+++ b/LINQ/LINQ.csproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Content Include="books.json"/>
+    <Content Include="books.json" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.151" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
 </Project>
