--- a/.github/workflows/workflow1.yml
+++ b/.github/workflows/workflow1.yml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Build application
         run: dotnet build
+        working-directory: LINQ
 
       - name: Run application
         run: dotnet run
+        working-directory: LINQ
